@@ -46,6 +46,7 @@ public:
 		hybridDB, //!< hybrid in dot-bar notation
 		hybridDPfull, //!< hybrid in VRNA dot-bracket notation for full sequence lengths
 		hybridDBfull, //!< hybrid in dot-bar notation for full sequence lengths
+		bpList, //!< list of hybrid base pairs like (1,3),(4,2),...
 		E, //!< overall interaction energy
 		ED1, //!< ED value of seq1
 		ED2, //!< ED value of seq2
@@ -120,6 +121,7 @@ protected:
 			colType2string[hybridDB] = "hybridDB";
 			colType2string[hybridDPfull] = "hybridDPfull";
 			colType2string[hybridDBfull] = "hybridDBfull";
+			colType2string[bpList] = "bpList";
 			colType2string[E] = "E";
 			colType2string[ED1] = "ED1";
 			colType2string[ED2] = "ED2";
@@ -388,6 +390,7 @@ needBPs( const ColTypeList & colTypes )
 		case hybridDBfull:
 		case hybridDP:
 		case hybridDPfull:
+		case bpList:
 			return true;
 		}
 	}
